testsuite/bsc.typechecker/context-errors/AmbigCtxImplTruncateExtend.bsv.bsc-out.expected
checking package dependencies
compiling AmbigCtxImplTruncateExtend.bsv
Error: "AmbigCtxImplTruncateExtend.bsv", line 4, column 12: (T0035)
  Bit vector of unknown size introduced near this location.
  Please remove unnecessary extensions, truncations and concatenations and/or
  provide more type information to resolve this ambiguity.
Error: "AmbigCtxImplTruncateExtend.bsv", line 4, column 22: (T0035)
  Bit vector of unknown size introduced near this location.
  Please remove unnecessary extensions, truncations and concatenations and/or
  provide more type information to resolve this ambiguity.
